--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Automates division process of files to serve your webpack bundles",
   "main": "./src/index.js",
   "scripts": {
-    "mocha": "mocha",
-    "test": "mocha --recursive --reporter dot ./tests || exit 0",
-    "debug": "iron-node node_modules/mocha/bin/_mocha"
+    "test": "node tests/example.js",
+    "debug": "node --inspect --debug-brk tests/example.js"
   },
   "keywords": [
     "webpack",
@@ -17,7 +16,7 @@
   "author": "lxjwlt",
   "license": "MIT",
   "files": [
-      "src"
+    "src"
   ],
   "engines": {
     "node": ">= 6.9.5"
@@ -26,5 +25,9 @@
     "type": "git",
     "url": "https://github.com/lxjwlt/divide-webpack-plugin.git"
   },
-  "homepage": "https://github.com/lxjwlt/divide-webpack-plugin"
+  "homepage": "https://github.com/lxjwlt/divide-webpack-plugin",
+  "devDependencies": {
+    "rimraf": "^2.6.1",
+    "webpack": "^2.6.1"
+  }
 }
