--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "node tests/example.js",
+    "mocha": "mocha test/*.spec.js",
     "debug": "node --inspect --debug-brk tests/example.js"
   },
   "keywords": [
@@ -27,8 +28,10 @@
   },
   "homepage": "https://github.com/lxjwlt/divide-webpack-plugin",
   "devDependencies": {
+    "chai": "^4.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
+    "mocha": "^3.4.2",
     "rimraf": "^2.6.1",
     "webpack": "^2.6.1"
   }
