--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Automates division process of files to serve your webpack bundles",
   "main": "./src/index.js",
   "scripts": {
-    "build": "node test/example.js",
+    "build-example": "node examples/build.js",
     "mocha": "mocha",
     "test": "mocha --recursive --reporter dot test/*.spec.js || exit 0",
     "debug-build": "node --inspect --debug-brk test/example.js",
-    "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha"
+    "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha",
+    "webpack": "webpack"
   },
   "keywords": [
     "webpack",
