--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/lxjwlt/divide-webpack-plugin",
   "devDependencies": {
     "chai": "^4.0.1",
+    "dir-compare": "^1.4.0",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
