--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Automates division process of files to serve your webpack bundles",
   "main": "src/index.js",
   "scripts": {
-    "build-example": "node examples/build.js",
+    "build": "node examples/build.js",
     "mocha": "mocha",
     "test": "mocha --recursive --reporter dot test/*.spec.js || exit 0",
-    "debug-build": "node --inspect --debug-brk test/example.js",
+    "debug-build": "node --inspect --debug-brk examples/build.js",
     "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha"
   },
   "keywords": [
