--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
   "homepage": "https://github.com/lxjwlt/divide-webpack-plugin",
   "devDependencies": {
     "chai": "^4.0.1",
+    "css-loader": "^0.28.4",
     "dir-compare": "^1.4.0",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "mocha": "^3.4.2",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   },
   "peerDependencies": {
