--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "src/index.js",
   "scripts": {
     "build": "node examples/build.js",
-    "mocha": "mocha",
     "test": "mocha --recursive --reporter dot test/*.spec.js || exit 0",
     "debug-build": "node --inspect --debug-brk examples/build.js",
     "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha"
@@ -41,7 +40,8 @@
     "jquery": "^3.2.1",
     "mocha": "^3.4.2",
     "style-loader": "^0.18.2",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "zombie": "^5.0.5"
   },
   "peerDependencies": {
     "webpack": ">=2.0.0"
