--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "build": "node examples/build.js",
-    "test": "mocha --recursive --reporter dot test/*.spec.js || exit 0",
+    "test": "npm run lint && mocha --recursive --reporter dot test/*.spec.js || exit 0",
     "debug-build": "node --inspect --debug-brk examples/build.js",
-    "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha"
+    "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha",
+    "lint": "eslint '**/*.js'"
   },
   "keywords": [
     "webpack",
@@ -35,6 +36,12 @@
     "chai": "^4.0.1",
     "css-loader": "^0.28.4",
     "dir-compare": "^1.4.0",
+    "eslint": "^4.1.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
