--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
