--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "divide-webpack-plugin",
-  "version": "0.0.1",
+  "name": "split-webpack-plugin",
+  "version": "1.0.0",
   "description": "Automates division process of files to serve your webpack bundles",
   "main": "src/index.js",
   "scripts": {
@@ -13,9 +13,9 @@
   },
   "keywords": [
     "webpack",
+    "split",
     "plugin",
-    "divide",
-    "divide-webpack-plugin"
+    "split-webpack-plugin"
   ],
   "author": "lxjwlt",
   "license": "MIT",
@@ -23,16 +23,16 @@
     "src"
   ],
   "bugs": {
-    "url": "https://github.com/lxjwlt/divide-webpack-plugin/issues"
+    "url": "https://github.com/lxjwlt/split-webpack-plugin/issues"
   },
   "engines": {
     "node": ">= 6.9.5"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxjwlt/divide-webpack-plugin.git"
+    "url": "https://github.com/lxjwlt/split-webpack-plugin.git"
   },
-  "homepage": "https://github.com/lxjwlt/divide-webpack-plugin",
+  "homepage": "https://github.com/lxjwlt/split-webpack-plugin",
   "devDependencies": {
     "chai": "^4.0.1",
     "css-loader": "^0.28.4",
