webpack3 ci test

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 env:
   - WEBPACK_VERSION=1 EXTRACT_PLUGIN_VERSION=1
   - WEBPACK_VERSION=2 EXTRACT_PLUGIN_VERSION=2
+  - WEBPACK_VERSION=3 EXTRACT_PLUGIN_VERSION=3
 matrix:
   fast_finish: true
 cache:
