--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "debug-build": "node --inspect --debug-brk examples/build.js",
     "debug": "node --inspect --debug-brk ./node_modules/mocha/bin/_mocha",
     "lint": "eslint '**/*.js'",
-    "fix": "npm run lint -- --fix"
+    "fix": "npm run lint -- --fix",
+    "coverage": "istanbul cover --root src ./node_modules/mocha/bin/_mocha -R test/*.spec.js",
+    "codecov": "codecov"
   },
   "keywords": [
     "webpack",
@@ -35,6 +37,7 @@
   "homepage": "https://github.com/lxjwlt/split-webpack-plugin",
   "devDependencies": {
     "chai": "^4.0.1",
+    "codecov": "^2.2.0",
     "css-loader": "^0.28.4",
     "dir-compare": "^1.4.0",
     "eslint": "^4.1.0",
@@ -46,6 +49,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
